# ziv-lang

./: .gitignore  CLAUDE.md  COMPLETION_REPORT.md  Cargo.toml  ELF_GENERATION_SUCCESS.md  IR_CODEGEN_PROGRESS.md  PROGRESS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SEMANTIC_PROGRESS.md  STATUS.md  TASK_PROGRESS.md  TASK_SUMMARY.md  TODAY_SUMMARY.md  WIP_FUNCTIONS_PROGRESS.md  fib  fib.s  final_test  final_test.s  return52  simple_test  test_ir  test_ir.s  test_simple  test_simple.s
crates/ziv-stdlib/src/: lib.rs  utils.rs
docs/: LANGUAGE_SPEC.md  QUICK_START.md  STDLIB_API.md
docs/plans/: 2026-03-04-arm64-codegen.md  2026-03-04-cranelift-codegen.md  2026-03-04-functions-and-testing.md
docs/zh-CN/: README.md  STDLIB_API.md  STDLIB_GUIDE.md  SYNTAX_TUTORIAL.md
examples/: demo.rs  fib.ll  fib_simple.ll  final_test.ll  return52.ll  simple.ll  test_basic.ll  test_ir.ll
examples/stdlib/: array_demo.lumi  array_demo.ziv  hello.lumi  hello.ziv  math_demo.lumi  math_demo.ziv  net_demo.ziv  string_demo.lumi  string_demo.ziv  utils_demo.ziv
src/: compiler.rs  lib.rs  main.rs
src/codegen/: arm64.rs  llvm_text.rs  mod.rs  x86_64.rs
src/codegen/cranelift/: mod.rs
src/ir/: builder.rs  instructions.rs  mod.rs
src/lexer/: mod.rs
src/parser/: ast.rs  mod.rs  mod.rs.backup
src/semantic/: mod.rs  symbols.rs  type_checker.rs  types.rs
src/stdlib/: array.rs  io.rs  math.rs  mod.rs  string.rs
tests/: codegen_tests.rs  cranelift_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  stdlib_examples_tests.rs  stdlib_functional_tests.rs
